src/main/resources/Krakatau-master/tests/assembler/bad/badnestedcp.j
.class public Nest
.super java/lang/Object

.const [1] = Class [r1]
.const [r1] = Class [r2]
.const [r2] = Class [r3]
.const [r3] = Class [r4]
.const [r4] = Class [r5]
.const [r5] = Class [r6]
.const [r6] = Class [r7]
.const [r7] = Class [r8]
.const [r8] = Class [r9]
.const [r9] = Class [r10]
.const [r10] = Class [r11]
.const [r11] = Class [r12]
.const [r12] = Class [r13]
.const [r13] = Class [r14]
.const [r14] = Class Foo


.end class